Add SignalR connection, decomposite my-form text inputs and submit button to dedicated controls

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="/css/font-awesome.css"/>
 		<title>Application</title>
 		%sveltekit.head%
 	</head>
@@ -16,7 +17,7 @@
 			user-select: none;
 			min-height: 100vh;
 			margin: 0;
-			background: #000;
+			background: rgb(29, 58, 116);
 			font-family: Verdana, Geneva, Tahoma, sans-serif;
 			font-size: 8pt;
 		}
